# hotkeys

./: AUTHORS  BUGS  INSTALL  Imakefile  Makefile.am  README  TODO  acinclude.m4  apmlib.c  config.h.in  configure.in  hotkeys.c  hotkeys.h  hotkeys.man  hotkeys.spec  kbddef.c  kbddef.h
debian/: changelog  conffiles  control  copyright  docs  ex.doc-base.package  hotkeys.postrm  hotkeys.prerm  manpage.sgml.ex  menu  postinst.hotkeys  preinst.ex  rules  shlibs.local
def/: Makefile.am  acerwl.def  btc9000.def  hp5181.def  ibook.def  itouch.def  kb9930.def  kb9963.def  kbp8993.def  logitech-cfo.def  mck800.def  msnatpro.def  msnet.def  msnetpro.def  mx1998.def  mx2500.def  mx3000.def  orktekusb.def  pb5140w.def  polypix.def  sample.xml  sample.xml.def  sk2500.def  sk2501a.def  sk2505.def  sk2800c.def  sk7100.def  sk9925.def
src/: Makefile.am  common.h  conf.c  conf.h  fixVMware.c  hotkeys.1  hotkeys.c  hotkeys.conf  hotkeys.h  kbddef.c  kbddef.h  splash.c  splash.h  splash.xpm  xmalloc.c  xmalloc.h
