dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/hotkeys.c)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(hotkeys, 0.5.4)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_ARG_WITH(xml-prefix,
    [  --with-xml-prefix=PFX   Prefix where GNOME XML library is installed],
    xml_config_prefix="$withval", xml_config_prefix="")

AC_ARG_ENABLE(xmltest,
    [  --disable-xmltest       Do not try to compile and run a test XML program],
    , enable_xmltest=yes)

AC_ARG_WITH(db2-inc,
    [  --with-db2-inc=DIR      Set the include directory of Berkeley DB2],
    db2_incdir="$withval", db2_incdir="")
 
AC_ARG_WITH(db2-lib,
    [  --with-db2-lib=DIR      Set the library directory of Berkeley DB2],
    db2_libdir="$withval", db2_libdir="")

dnl not yet...
dnl AC_ARG_WITH(gtk,
dnl    [  --with-gtk              Use GTK Interface],
dnl    use_gtk=yes, )

AC_ARG_ENABLE(xosd,
    [  --disable-xosd          Don't use XOSD library],
    ,enable_xosd=yes)

AC_ARG_WITH(xosd-inc,
    [  --with-xosd-inc=DIR     Set the include directory of XOSD],
    xosd_incdir="$withval", xosd_incdir="")

AC_ARG_WITH(xosd-lib,
    [  --with-xosd-lib=DIR     Set the library directory of XOSD],
    xosd_libdir="$withval", xosd_libdir="")

dnl-----------------------------------------------------------------------
dnl Checks for X
dnl-----------------------------------------------------------------------
AC_PATH_XTRA
if test "x$no_x" = "xyes"
then
    AC_MSG_ERROR("You must have X installed")
else
    X_LIBS="$X_LIBS -lX11 -lXmu"
fi

dnl-----------------------------------------------------------------------
dnl Checks for LIBXML2
dnl-----------------------------------------------------------------------
if test "x$enable_xmltest" = "xyes"; then
    AM_CHECK_LIBXML2
fi

dnl Checks for libraries.
dnl Replace `main' with a function in -lX11:
dnl AC_CHECK_LIB(X11, XNextEvent)
dnl Replace `main' with a function in -lxkbfile:
dnl AC_CHECK_LIB(xkbfile, main)
dnl Replace `main' with a function in -lxml:
dnl Replace `main' with a function in -lz:
dnl AC_CHECK_LIB(z, main)

dnl AM_PATH_GTK()
dnl AM_PATH_GLIB(1.2.0, ,[AC_MSG_ERROR(Missing gthread module in GLib!)], gthread)
dnl AC_SUBST(GLIB_LIBS)
dnl AC_SUBST(GLIB_CFLAGS)

dnl-----------------------------------------------------------------------
dnl Checks for DB2
dnl-----------------------------------------------------------------------
AM_CHECK_DB2

dnl-----------------------------------------------------------------------
dnl Checks for XOSD
dnl-----------------------------------------------------------------------
if test ! x$xosd_libdir = x; then
    LIBS="$LIBS -L$xosd_libdir"
fi
if test ! x$xosd_incdir = x; then
    CPPFLAGS="$CPPFLAGS -I$xosd_incdir"
fi

if test "x$enable_xosd" = "xyes"
then
    AC_CHECK_LIB(xosd, xosd_init)
##    , [AC_DEFINE(HAVE_LIBXOSD),LIBS="$LIBS -lxosd",have_xosd=yes])
    if test "x$ac_cv_have_libxosd" != "xyes"
    then
        ## Although XOSD uses pthread, we must still link with -lpthread
        ## explicitly, otherwise strange things like "zombie thread"
        ## will occur when exec'ing, this is explained in this email:
        ## http://sources.redhat.com/ml/bug-glibc/2000-04/msg00023.html
        CFLAGS="$CFLAGS -D_REENTRANT"
        LIBS="$LIBS -lpthread"
    fi
fi


dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_MAJOR
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h string.h strings.h syslog.h sys/file.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_VPRINTF
AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(select strdup strerror getopt_long)

AC_OUTPUT(Makefile src/Makefile def/Makefile)
